tests/ui/mismatched_types/wrap-suggestion-privacy.stderr
error[E0308]: mismatched types
  --> $DIR/wrap-suggestion-privacy.rs:12:19
   |
LL |     needs_wrapper(0);
   |     ------------- ^ expected `Wrapper<i32>`, found integer
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Wrapper<i32>`
                found type `{integer}`
note: function defined here
  --> $DIR/wrap-suggestion-privacy.rs:5:4
   |
LL | fn needs_wrapper(t: inner::Wrapper<i32>) {}
   |    ^^^^^^^^^^^^^ ----------------------
help: try wrapping the expression in `inner::Wrapper` (its field is private, but it's local to this crate and its privacy can be changed)
   |
LL |     needs_wrapper(inner::Wrapper(0));
   |                   +++++++++++++++ +

error[E0308]: mismatched types
  --> $DIR/wrap-suggestion-privacy.rs:17:20
   |
LL |     needs_wrapping(0);
   |     -------------- ^ expected `Wrapping<i32>`, found integer
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Wrapping<i32>`
                found type `{integer}`
note: function defined here
  --> $DIR/wrap-suggestion-privacy.rs:6:4
   |
LL | fn needs_wrapping(t: std::num::Wrapping<i32>) {}
   |    ^^^^^^^^^^^^^^ --------------------------
help: try wrapping the expression in `std::num::Wrapping`
   |
LL |     needs_wrapping(std::num::Wrapping(0));
   |                    +++++++++++++++++++ +

error[E0308]: mismatched types
  --> $DIR/wrap-suggestion-privacy.rs:22:17
   |
LL |     needs_ready(Some(0));
   |     ----------- ^^^^^^^ expected `Ready<i32>`, found `Option<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `std::future::Ready<i32>`
                found enum `Option<{integer}>`
note: function defined here
  --> $DIR/wrap-suggestion-privacy.rs:7:4
   |
LL | fn needs_ready(t: std::future::Ready<i32>) {}
   |    ^^^^^^^^^^^ --------------------------

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
